crates/trading/tests/ui/client_rejection_external_match_requires_wildcard.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/ui/client_rejection_external_match_requires_wildcard.rs:4:11
   |
 4 |     match error {
   |           ^^^^^ pattern `_` not covered
   |
note: `ClientRejection` defined here
  --> src/validation.rs
   |
   | pub enum ClientRejection {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `ClientRejection`
   = note: `ClientRejection` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
13 ~         ClientRejection::InvalidPartnerFee { .. } => "invalid-partner-fee",
14 ~         _ => todo!(),
   |
